--- a/ui/src/app/views/workflow/workflow.html
+++ b/ui/src/app/views/workflow/workflow.html
@@ -1,21 +1,16 @@
 <div class="workflow-page">
     <app-workflow-breadcrumb [project]="project" [workflow]="workflow">
-        <div class="right floated" [title]="'favorite_add_btn' | translate">
-            <div class="ui active small inline loader" *ngIf="loadingFav"></div>
-            <i class="pointing star icon" *ngIf="!loadingFav" [class.pointing]="!loading"
-                [ngClass]="{'animated infinite pulse' : loadingFav}" [class.favorite]="workflow?.favorite"
-                [class.unfavorite]="!workflow?.favorite" (click)="updateFav()"></i>
+        <div class="floatRight" [title]="'favorite_add_btn' | translate">
+            <nz-spin nzSimple *ngIf="loadingFav"></nz-spin>
+            <ng-container *ngIf="!loadingFav">
+                <i nz-icon nzType="star" nzTheme="outline" class="star unfavorite" *ngIf="!workflow?.favorite" (click)="updateFav()"></i>
+                <i nz-icon nzType="star" nzTheme="fill" class="star favorite" *ngIf="workflow?.favorite" (click)="updateFav()"></i>
+            </ng-container>
         </div>
-        <div class="right floated labelFeature" [title]="'workflow_from_repository_btn' | translate">
-            <a class="ui label small basic"
-                [class.green]="workflow && workflow.from_repository && (!workflow.as_code_events || workflow.as_code_events.length === 0)"
-                [class.orange]="workflow && workflow.as_code_events && workflow.as_code_events.length > 0"
-                [class.grey]="workflow && !workflow.from_repository && (!workflow.as_code_events || workflow.as_code_events.length === 0)"
-                suiPopup [popupTemplate]="popupFromRepository" popupPlacement="bottom right" popupTrigger="outsideClick"
-                #popupFromRepo="suiPopup">
-                <i class="code icon"></i>as code
-            </a>
-            <ng-template let-popup #popupFromRepository>
+        <div class="floatRight labelFeature" [title]="'workflow_from_repository_btn' | translate">
+            <nz-tag [nzColor]="asCodeTagColor" nz-popover nzPopoverTrigger="click" [nzPopoverContent]="popupFromRepository"
+            nzPopoverPlacement="rightBottom"><i nz-icon nzType="code" nzTheme="outline"></i>as code</nz-tag>
+            <ng-template #popupFromRepository>
                 <div class="content infoPopup">
                     <ng-container
                         *ngIf="workflow && (workflow.from_repository || (workflow.as_code_events && workflow.as_code_events.length > 0))">
@@ -24,73 +19,56 @@
                     </ng-container>
                     <ng-container
                         *ngIf="workflow && !workflow.from_repository && (!workflow.as_code_events || workflow.as_code_events.length === 0)">
-                        <p>{{'workflow_repository_help_line_1' | translate}}</p>
-                        <p>{{'workflow_repository_help_line_2' | translate}}</p>
+                        <p>Your workflow was not imported from your code.</p>
+                        <p>Manage your workflow as code from your repository to automatically update it with changes on your branches.</p>
                         <div class="footer">
-                            <div>
-                                <div class="ui list">
-                                    <a class="item" target="_blank" rel="noopener noreferrer" href="#"
+                            <a class="item" target="_blank" rel="noopener noreferrer" href="#"
                                         [routerLink]="['/docs', 'docs', 'tutorials', 'init_workflow_with_cdsctl']">
-                                        {{'common_read_more' | translate}}</a>
-                                </div>
-                            </div>
-                            <div class="migrate">
-                                <button class="ui right floated green mini button"
-                                    (click)="openSaveAsCodeModal();popup.close()">Migrate</button>
-                            </div>
+                                        Read more</a>
+                            <button nz-button nzType="primary" (click)="openSaveAsCodeModal()">Migrate</button>
                         </div>
                     </ng-container>
                 </div>
             </ng-template>
         </div>
-        <div class="right floated labelFeature" [title]="'workflow_from_template_btn' | translate">
-            <a class="ui label small basic"
-                [ngClass]="workflow && workflow.from_template ? (workflow.template_up_to_date ? 'green' : 'orange') : 'grey'"
-                suiPopup [popupTemplate]="popupFromTemplate" popupPlacement="bottom right" popupTrigger="outsideClick"
-                #popupFromTemp="suiPopup">
-                <i class="paste icon"></i>template
-            </a>
-            <ng-template let-popup #popupFromTemplate>
+        <div class="floatRight labelFeature" [title]="'workflow_from_template_btn' | translate">
+            <nz-tag [nzColor]="workflow && workflow.from_template ? (workflow.template_up_to_date ? 'green' : 'orange') : ''"
+                    nz-popover nzPopoverTrigger="click" [nzPopoverContent]="popupFromTemplate"
+                    nzPopoverPlacement="rightBottom"><i nz-icon nzType="copy" nzTheme="outline"></i>template</nz-tag>
+            <ng-template #popupFromTemplate>
                 <div class="content infoPopup">
                     <div *ngIf="workflow && workflow.from_template;then fromTemplateInfo;else fromTemplateHelp"></div>
                     <ng-template #fromTemplateInfo>
                         <p>{{ 'workflow_from_template' | translate}}
                             <a
                                 [routerLink]="['/settings/workflow-template/' + workflow.from_template.split('@')[0]]">{{workflow.from_template}}</a>
-                            <span *ngIf="!workflow.template_up_to_date"
-                                class="ui orange label mini">{{'common_not_up_to_date'
-                                | translate }}</span>
+                                <nz-tag *ngIf="!workflow.template_up_to_date" nzColor="orange">{{'common_not_up_to_date'
+                                    | translate }}</nz-tag>
                         </p>
-                        <div class="ui compact menu">
-                            <a class="item small" (click)="showTemplateFrom();popup.close()">
-                                {{'common_update' | translate}}
-                            </a>
+                        <div class="footer">
+                            <button nz-button nzType="primary" nzSize="small" (click)="showTemplateFrom()">Update</button>
                         </div>
                     </ng-template>
                     <ng-template #fromTemplateHelp>
-                        <p>{{'workflow_template_help_line_1' | translate}}</p>
-                        <p>{{'workflow_template_help_line_2' | translate}}</p>
-                        <div class="ui list">
+                        <p>Your workflow was not generated from a template.</p>
+                        <p>A workflow template allows you to quickly create then update a workflow and its components.</p>
+                        <p>You can init a new template from current workflow.</p>
+                        <div class="footer">
                             <a class="item" target="_blank" rel="noopener noreferrer" href="#"
-                                [routerLink]="['/docs', 'docs', 'concepts', 'template']">
-                                {{'common_read_more' | translate}}</a>
-                        </div>
-                        <p>{{'workflow_template_help_line_3' | translate}}</p>
-                        <div class="ui compact menu">
-                            <a class="item small" (click)="initTemplateFromWorkflow();popup.close()">
-                                {{'workflow_template_init_from_workflow' | translate}}
-                            </a>
+                               [routerLink]="['/docs', 'docs', 'concepts', 'template']">
+                                Read more</a>
+                            <button nz-button nzType="primary" (click)="initTemplateFromWorkflow()">Init a template</button>
                         </div>
                     </ng-template>
                 </div>
             </ng-template>
         </div>
-        <div *ngIf="project && workflow && workflowV3Enabled" class="right floated labelFeature preview"
+        <div *ngIf="project && workflow && workflowV3Enabled" class="floatRight labelFeature preview"
             [title]="'workflow_from_template_btn' | translate">
-            <a class="ui label small blue"
-                [routerLink]="runNumber ? ['/project', project.key, 'workflowv3', workflow.name, 'run', runNumber] : ['/project', project.key, 'workflowv3', workflow.name]">
+            <nz-tag nzColor="blue"
+                    [routerLink]="runNumber ? ['/project', project.key, 'workflowv3', workflow.name, 'run', runNumber] : ['/project', project.key, 'workflowv3', workflow.name]">
                 Preview Workflow v3
-            </a>
+            </nz-tag>
         </div>
     </app-workflow-breadcrumb>
     <div class="workflow-wrapper">
