--- a/ui/src/app/views/pipeline/show/pipeline.show.html
+++ b/ui/src/app/views/pipeline/show/pipeline.show.html
@@ -9,8 +9,7 @@
                     [class.green]="pipeline && pipeline.from_repository && (!pipeline.ascode_events || pipeline.ascode_events.length ===0)"
                     [class.orange]="pipeline && pipeline.from_repository && pipeline?.ascode_events?.length > 0"
                     [class.grey]="pipeline && !pipeline.from_repository && (!pipeline.ascode_events || pipeline.ascode_events.length === 0)"
-                    suiPopup [popupTemplate]="popupFromRepository" popupPlacement="bottom right"
-                    popupTrigger="outsideClick" #popup="suiPopup">
+                    nz-popover [nzPopoverContent]="popupFromRepository" nzPopoverPlacement="bottomLeft" nzPopoverTrigger="click">
                     <i class="code icon"></i>as code
                 </a>
                 <ng-template let-popup #popupFromRepository>
