--- a/ui/src/ngzorro.dark.less
+++ b/ui/src/ngzorro.dark.less
@@ -1,5 +1,9 @@
 @import "node_modules/ng-zorro-antd/ng-zorro-antd.dark.less";
 
+.ant-popover-inner, .ant-popover-arrow-content {
+  background-color: #313131;
+}
+
 .CodeMirror {
   border: 1px solid #434343;
 }
