--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -225,6 +225,9 @@ body ::-webkit-scrollbar-thumb {
 }
 
 // icon
+i.warning {
+  color: $cds_color_red !important;
+}
 .ui {
     i.icon.blue {
         color: $cds_color_teal !important;
