--- a/ui/src/app/views/project/show/project.html
+++ b/ui/src/app/views/project/show/project.html
@@ -1,7 +1,7 @@
 <ng-template #tabPermissionTemplate>
     <i [ngClass]="['users', 'icon']"></i>
     Permissions
-    <ng-template let-popup #warnPermission>
+    <ng-template #warnPermission>
         Following groups that are not from organization "{{project.organization}}" can read the
         project:
         <span *ngFor="let gp of groupsOutsideOrganization;let i = index">{{gp.group.name}}
@@ -9,8 +9,7 @@
                 .
     </ng-template>
     <i *ngIf="project && groupsOutsideOrganization && groupsOutsideOrganization.length > 0"
-        class="exclamation triangle orange icon" suiPopup [popupTemplate]="warnPermission"
-        popupPlacement="bottom left"></i>
+        class="exclamation triangle orange icon" nz-popover [nzPopoverContent]="warnPermission" nzPopoverPlacement="bottomLeft"></i>
 </ng-template>
 <div *ngIf="project; then projectPart;else loadingPart"></div>
 <ng-template #projectPart>
