--- a/ui/src/app/views/settings/action/usage/action.usage.html
+++ b/ui/src/app/views/settings/action/usage/action.usage.html
@@ -6,8 +6,7 @@
                 <a [routerLink]="['/project', p.project_key, 'pipeline', p.pipeline_name]">
                     {{p.project_name}} - {{p.pipeline_name}} - {{p.action_name}}
                 </a>
-                <i *ngIf="p.warning" suiPopup [popupText]="'action_usage_warning_pipeline' | translate"
-                    class="red exclamation triangle icon"></i>
+                <i *ngIf="p.warning" class="warning" nz-icon nzType="warning" nzTheme="fill" nz-tooltip nzTooltipTitle="The pipeline will not be able to run this action because of missing group permission."></i>
             </li>
         </ul>
     </ng-container>
@@ -17,8 +16,7 @@
             <li *ngFor="let a of usage.actions">
                 <a [routerLink]="['/settings/action', a.group_name, a.parent_action_name]">
                     {{a.group_name ? a.group_name+'/' : ''}}{{a.parent_action_name}}</a>
-                <i *ngIf="a.warning" suiPopup [popupText]="'action_usage_warning_action' | translate"
-                    class="red exclamation triangle icon"></i>
+                <i *ngIf="a.warning" class="warning" nz-icon nzType="warning" nzTheme="fill" nz-tooltip nzTooltipTitle="The parent action will not be able to run this action because they are not in the same group."></i>
             </li>
         </ul>
     </ng-container>
