--- a/ui/src/app/views/workflow/run/node/test/tests.result.html
+++ b/ui/src/app/views/workflow/run/node/test/tests.result.html
@@ -4,15 +4,15 @@
             <div class="ui row" *ngIf="coverage">
                 <div class="right aligned five wide column">
                     <ng-container *ngIf="coverage.report.total_lines > 0">
-                        <span *ngIf="currentBranchTrendLines" suiPopup popupText="{{coverage.report.covered_lines}}/{{coverage.report.total_lines}} ({{(percentLines - currentBranchTrendLines).toFixed(2)}}%)">{{ 'coverage_lines_title' | translate}}{{percentLines}}%</span>
-                        <span *ngIf="!currentBranchTrendLines && defaultBranchTrendLines" suiPopup popupText="{{coverage.report.covered_lines}}/{{coverage.report.total_lines}} ({{(percentLines - defaultBranchTrendLines).toFixed(2)}}%)">{{ 'coverage_lines_title' | translate}}{{percentLines}}%</span>
-                        <span *ngIf="currentBranchTrendLines" suiPopup popupText="{{'coverage_trend_current_branch' | translate }}">
+                        <span *ngIf="currentBranchTrendLines" nz-tooltip nzTooltipTitle="{{coverage.report.covered_lines}}/{{coverage.report.total_lines}} ({{(percentLines - currentBranchTrendLines).toFixed(2)}}%)">{{ 'coverage_lines_title' | translate}}{{percentLines}}%</span>
+                        <span *ngIf="!currentBranchTrendLines && defaultBranchTrendLines" nz-tooltip nzTooltipTitle="{{coverage.report.covered_lines}}/{{coverage.report.total_lines}} ({{(percentLines - defaultBranchTrendLines).toFixed(2)}}%)">{{ 'coverage_lines_title' | translate}}{{percentLines}}%</span>
+                        <span *ngIf="currentBranchTrendLines" nz-tooltip nzTooltipTitle="{{'coverage_trend_current_branch' | translate }}">
                             <i class="arrow icon" [class.down]="currentBranchTrendLines > percentLines" [class.red]="currentBranchTrendLines > percentLines"
                                 [class.up]="currentBranchTrendLines < percentLines" [class.green]="currentBranchTrendLines < percentLines"
                                *ngIf="currentBranchTrendLines !== percentLines"></i>
                             <i class="blue minus icon" *ngIf="currentBranchTrendLines === percentLines"></i>
                         </span>
-                        <span *ngIf="!currentBranchTrendLines && defaultBranchTrendLines" suiPopup popupText="{{'coverage_trend_default_branch' | translate }}">
+                        <span *ngIf="!currentBranchTrendLines && defaultBranchTrendLines" nz-tooltip nzTooltipTitle="{{'coverage_trend_default_branch' | translate }}">
                             <i class="arrow icon" [class.down]="defaultBranchTrendLines > percentLines" [class.red]="defaultBranchTrendLines > percentLines"
                                [class.up]="defaultBranchTrendLines < percentLines" [class.green]="defaultBranchTrendLines < percentLines"
                                *ngIf="defaultBranchTrendLines !== percentLines"></i>
@@ -22,14 +22,14 @@
                 </div>
                 <div class="centered five wide column">
                     <ng-container *ngIf="coverage.report.total_functions > 0">
-                        <span suiPopup popupText="{{coverage.report.covered_functions}}/{{coverage.report.total_functions}} ({{(percentFunctions - currentBranchTrendFunctions).toFixed(2) + '%'}})">{{ 'coverage_functions_title' | translate}}: {{percentFunctions}}%</span>
-                        <span *ngIf="currentBranchTrendFunctions" suiPopup popupText="{{'coverage_trend_current_branch' | translate }}">
+                        <span nz-tooltip nzTooltipTitle="{{coverage.report.covered_functions}}/{{coverage.report.total_functions}} ({{(percentFunctions - currentBranchTrendFunctions).toFixed(2) + '%'}})">{{ 'coverage_functions_title' | translate}}: {{percentFunctions}}%</span>
+                        <span *ngIf="currentBranchTrendFunctions" nz-tooltip nzTooltipTitle="{{'coverage_trend_current_branch' | translate }}">
                             <i class="arrow icon" [class.down]="currentBranchTrendFunctions > percentFunctions" [class.red]="currentBranchTrendFunctions > percentFunctions"
                                [class.up]="currentBranchTrendFunctions < percentFunctions" [class.green]="currentBranchTrendFunctions < percentFunctions"
                                *ngIf="currentBranchTrendFunctions !== percentFunctions"></i>
                             <i class="blue minus icon" *ngIf="currentBranchTrendFunctions === percentFunctions"></i>
                         </span>
-                        <span *ngIf="!currentBranchTrendFunctions && defaultBranchTrendFunctions" suiPopup popupText="{{'coverage_trend_default_branch' | translate }}">
+                        <span *ngIf="!currentBranchTrendFunctions && defaultBranchTrendFunctions" nz-tooltip nzTooltipTitle="{{'coverage_trend_default_branch' | translate }}">
                             <i class="arrow icon" [class.down]="defaultBranchTrendFunctions > percentFunctions" [class.red]="defaultBranchTrendFunctions > percentFunctions"
                                [class.up]="defaultBranchTrendFunctions < percentFunctions" [class.green]="defaultBranchTrendFunctions < percentFunctions"
                                *ngIf="defaultBranchTrendFunctions !== percentFunctions"></i>
@@ -39,14 +39,14 @@
                 </div>
                 <div class="five wide column">
                     <ng-container *ngIf="coverage.report.total_branches > 0">
-                        <span suiPopup popupText="{{coverage.report.covered_branches}}/{{coverage.report.total_branches}} ({{(percentBranches - currentBranchTrendBranches).toFixed(2) + '%'}})">{{ 'coverage_branches_title' | translate}}: {{percentBranches}}%</span>
-                         <span *ngIf="currentBranchTrendBranches" suiPopup popupText="{{'coverage_trend_current_branch' | translate }}">
+                        <span nz-tooltip nzTooltipTitle="{{coverage.report.covered_branches}}/{{coverage.report.total_branches}} ({{(percentBranches - currentBranchTrendBranches).toFixed(2) + '%'}})">{{ 'coverage_branches_title' | translate}}: {{percentBranches}}%</span>
+                         <span *ngIf="currentBranchTrendBranches" nz-tooltip nzTooltipTitle="{{'coverage_trend_current_branch' | translate }}">
                             <i class="arrow icon" [class.down]="currentBranchTrendBranches > percentBranches" [class.red]="currentBranchTrendBranches > percentBranches"
                                [class.up]="currentBranchTrendBranches < percentBranches" [class.green]="currentBranchTrendBranches < percentBranches"
                                *ngIf="currentBranchTrendBranches !== percentBranches"></i>
                              <i class="blue minus icon" *ngIf="currentBranchTrendBranches === percentBranches"></i>
                         </span>
-                        <span *ngIf="!currentBranchTrendBranches && defaultBranchTrendBranches" suiPopup popupText="{{'coverage_trend_default_branch' | translate }}">
+                        <span *ngIf="!currentBranchTrendBranches && defaultBranchTrendBranches" nz-tooltip nzTooltipTitle="{{'coverage_trend_default_branch' | translate }}">
                             <i class="arrow icon" [class.down]="defaultBranchTrendBranches > percentBranches" [class.red]="defaultBranchTrendBranches > percentBranches"
                                [class.up]="defaultBranchTrendBranches < percentBranches" [class.green]="defaultBranchTrendBranches < percentBranches"
                                *ngIf="defaultBranchTrendBranches !== percentBranches"></i>
