--- a/ui/src/app/shared/workflow/menu/edit-node/menu.edit.node.scss
+++ b/ui/src/app/shared/workflow/menu/edit-node/menu.edit.node.scss
@@ -1,6 +1,9 @@
-.item:hover {
-    text-decoration: underline;
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
-.item.disabled {
-    text-decoration: none;
+
+a.disabled {
+  text-decoration: none;
 }
