--- a/ui/src/app/shared/workflow/node/hook/details/hook.details.component.html
+++ b/ui/src/app/shared/workflow/node/hook/details/hook.details.component.html
@@ -1,112 +1,100 @@
-<ng-template let-context let-modal="modal" #nodeHookDetailsModal>
-    <div class="header">
-        <span>{{ 'workflow_node_hook_details_modal_title' | translate }}</span>
-    </div>
-    <div class="content scrolling">
-        <ng-container *ngIf="loading">
-            <div class="ui center aligned field">
-                <i class="circle notch loading blue icon"></i>
-                Loading hook executions
-            </div>
-        </ng-container>
-
+<nz-spin nzSimple nzTip="Loading hook executions" *ngIf="loading" class="center"></nz-spin>
+<div *ngIf="!loading">
         <!-- Not found message -->
-        <ng-container *ngIf="!loading && runNumber && !task">
-            <div class="ui info message">Hook execution has been deleted</div>
+        <ng-container *ngIf="runNumber && !task">
+            <nz-alert nzType="info" nzMessage="Hook execution has been deleted"></nz-alert>
         </ng-container>
 
-        <ng-container *ngIf="!loading && executions">
+        <ng-container *ngIf="executions">
             <h3>Hook executions</h3>
-            <sui-select class="selection" name="selectExecution" (ngModelChange)="selectTask($event)" [(ngModel)]="task" [options]="executions"
-                        [optionTemplate]="optionTemplate"
-                        [isSearchable]="true" #selectIntegration
-                        [isDisabled]="runNumber">
-                <sui-select-option *ngFor="let t of selectIntegration.filteredOptions" [value]="t">
-                </sui-select-option>
-            </sui-select>
-            <ng-template let-option #optionTemplate>
-                <div class="hookItem">
-                    <div class="status" [class.done]="option.status === hookStatus.DONE"
-                         [class.doing]="option.status === hookStatus.DOING"
-                        [class.error]="option.status === hookStatus.FAIL"></div>
-                    {{ 'Workflow run n°' + option.workflow_run }}
-                    <span class="date">{{' at '}}{{option.timestamp/1000000 | amDateFormat: 'YYYY-MM-DD HH:mm:ss Z' }}</span>
-                </div>
-            </ng-template>
+            <nz-select nzShowSearch [(ngModel)]="task" (ngModelChange)="selectTask($event)">
+                <nz-option nzCustomContent *ngFor="let e of executions" [nzValue]="e" nzLabel="{{ 'Workflow run n°' + e.workflow_run }}">
+                        <div class="hookItem">
+                            <div class="status" [class.done]="e.status === hookStatus.DONE"
+                                 [class.doing]="e.status === hookStatus.DOING"
+                                 [class.error]="e.status === hookStatus.FAIL"></div>
+                            {{ 'Workflow run n°' + e.workflow_run }}
+                            <span class="date">{{' at '}}{{e.timestamp/1000000 | amDateFormat: 'YYYY-MM-DD HH:mm:ss Z' }}</span>
+                        </div>
+
+                </nz-option>
+            </nz-select>
         </ng-container>
 
         <ng-container *ngIf="task">
-            <div class="ui form">
+            <form nz-form>
                 <ng-container>
-                    <h3>{{ 'workflow_node_hook_form_config' | translate }}</h3>
+                    <h3>Hook configuration</h3>
                     <ng-container *ngIf="task.config">
-                        <div class="fields" *ngFor="let k of task.config | keys">
-                            <div class="four wide field"><label>{{k}}</label></div>
-                            <div class="twelve wide field">
-                                <input type="text" [ngModel]="task.config[k].value" [readonly]="true" *ngIf="k !== 'payload'">
+                        <nz-form-item *ngFor="let k of task.config | keys">
+                            <nz-form-label [nzSpan]="4" name="{{k}}">{{k}}</nz-form-label>
+                            <nz-form-control [nzSpan]="20">
+                                <input nz-input type="text" name="value-{{k}}" [ngModel]="task.config[k].value" [readonly]="true" *ngIf="k !== 'payload'">
                                 <ng-container *ngIf="k === 'payload'">
-                                    <codemirror
+                                    <codemirror name="value-{{k}}"
                                             [ngModel]="task.config[k].value"
                                             [config]="codeMirrorConfig"
                                             #textareaCodeMirror>
                                     </codemirror>
                                 </ng-container>
-                            </div>
-                        </div>
+                            </nz-form-control>
+                        </nz-form-item>
                     </ng-container>
-                    <div class="ui info message" *ngIf="!task.config">{{ 'workflow_node_hook_no_configuration' | translate }}</div>
-                    <h3>{{'workflow_hook_log_title' | translate}}</h3>
-                    <div class="fields" *ngIf="task.workflow_run">
-                        <div class="four wide field"><label>{{'workflow_hook_log_workflow_run' | translate}}</label></div>
-                        <div class="twelve wide field">
-                            <input type="text" [value]="task.workflow_run" [readonly]="true">
-                        </div>
-                    </div>
-                    <div class="fields">
-                        <div class="four wide field"><label>{{'worker_model_status' | translate}}</label></div>
-                        <div class="twelve wide field">
+                    <nz-alert nzType="info" nzMessage="No configuration"  *ngIf="!task.config"></nz-alert>
+
+                    <h3>Hook's log</h3>
+                    <nz-form-item *ngIf="task.workflow_run">
+                        <nz-form-label [nzSpan]="4">Workflow run</nz-form-label>
+                        <nz-form-control [nzSpan]="20">
+                            <input nz-input type="text" [value]="task.workflow_run" [readonly]="true" name="run">
+                        </nz-form-control>
+                    </nz-form-item>
+                    <nz-form-item>
+                        <nz-form-label [nzSpan]="4">Status</nz-form-label>
+                        <nz-form-control [nzSpan]="20">
                             <div class="ui icon read-only input">
                                 <i class="green check icon" *ngIf="task.status === hookStatus.DONE"></i>
                                 <i class="circle notch loading blue icon" *ngIf="task.status === hookStatus.DOING"></i>
                                 <i class="red close icon" *ngIf="task.status === hookStatus.FAIL"></i>
-                                <input type="text" [value]="task.status" readonly>
+                                <input nz-input type="text" [value]="task.status" name="status" readonly>
                             </div>
-                        </div>
-                    </div>
-                    <div class="fields">
-                        <div class="four wide field"><label>{{'common_begin' | translate}}</label></div>
-                        <div class="twelve wide field">
-                            <input type="text" [value]="(task.timestamp / 1000000) | date:'short'" [readonly]="true">
+                        </nz-form-control>
+                    </nz-form-item>
+                    <nz-form-item>
+                        <nz-form-label [nzSpan]="4">Begin</nz-form-label>
+                        <nz-form-control [nzSpan]="20">
+                            <input nz-input type="text" [value]="(task.timestamp / 1000000) | date:'short'" [readonly]="true" name="begin">
 
-                        </div>
-                    </div>
-                    <div class="fields">
-                        <div class="four wide field"><label>{{'common_end' | translate}}</label></div>
-                        <div class="twelve wide field">
-                            <input type="text" [value]="(task.processing_timestamp / 1000000) | date:'short'" [readonly]="true">
-                        </div>
-                    </div>
-                    <div class="fields" *ngIf="task.last_error">
-                        <div class="four wide field"><label>{{'common_error' | translate}}</label></div>
-                        <div class="twelve wide field">
-                            <input type="text" [value]="task.last_error" [readonly]="true">
-                        </div>
-                    </div>
-                    <div class="fields" *ngIf="body">
-                        <div class="four wide field"><label>Body</label></div>
-                        <div class="twelve wide field">
-                            <codemirror
+                        </nz-form-control>
+                    </nz-form-item>
+                    <nz-form-item>
+                        <nz-form-label [nzSpan]="4">End</nz-form-label>
+                        <nz-form-control [nzSpan]="20">
+                            <input nz-input type="text" [value]="(task.processing_timestamp / 1000000) | date:'short'" [readonly]="true" name="end">
+                        </nz-form-control>
+                    </nz-form-item>
+                    <nz-form-item *ngIf="task.last_error">
+                        <nz-form-label [nzSpan]="4">Error</nz-form-label>
+                        <nz-form-control [nzSpan]="20">
+                            <input nz-input type="text" [value]="task.last_error" [readonly]="true" name="error">
+                        </nz-form-control>
+                    </nz-form-item>
+                    <nz-form-item *ngIf="body">
+                        <nz-form-label [nzSpan]="4">Body</nz-form-label>
+                        <nz-form-control [nzSpan]="20">
+                            <codemirror name="body"
                                     [ngModel]="body"
                                     [config]="codeMirrorConfig"
                                     #code>
                             </codemirror>
-                        </div>
-                    </div>
+                        </nz-form-control>
+                    </nz-form-item>
                 </ng-container>
-            </div>
+            </form>
         </ng-container>
+
+</div>
+    <div *nzModalFooter>
+        <button nz-button (click)="_modal.close()">Close</button>
     </div>
-    <div class="actions">
-        <button class="ui grey button" (click)="modal.approve(true)">{{ 'common_close' | translate }}</button>
-    </div>
-</ng-template>
+
