--- a/ui/src/app/shared/workflow/node/hook/details/hook.details.component.scss
+++ b/ui/src/app/shared/workflow/node/hook/details/hook.details.component.scss
@@ -3,44 +3,30 @@ codemirror {
   width: 100%;
 }
 
-.content {
-  min-height: 400px;
-
-
-  .ui.form {
-    padding-top: 10px;
+.center {
+  text-align: center;
+}
+nz-select {
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 20px;
+}
+.hookItem {
+  .status {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 36px;
+    border-left: 5px solid $cds_color_light_grey
   }
-
-  sui-select {
-    sui-select-option {
-      .hookItem {
-        .status {
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 36px;
-          border-left: 5px solid $cds_color_light_grey
-        }
-        .status.done {
-          border-left: 5px solid $cds_color_green
-        }
-        .status.error {
-          border-left: 5px solid $cds_color_red
-        }
-        .status.doing {
-          border-left: 5px solid $cds_color_teal
-        }
-      }
-    }
-
-    .hookItem {
-      .date {
-        font-size: 12px;
-        font-style: italic;
-        color: #8C8C8C;
-      }
-    }
-
+  .status.done {
+    border-left: 5px solid $cds_color_green
+  }
+  .status.error {
+    border-left: 5px solid $cds_color_red
+  }
+  .status.doing {
+    border-left: 5px solid $cds_color_teal
   }
 }
