--- a/ui/src/app/shared/workflow/wnode/hook/hook.html
+++ b/ui/src/app/shared/workflow/wnode/hook/hook.html
@@ -1,5 +1,5 @@
 <div class="workflowHook pointing" nz-popover nzPopoverTrigger="click" nzPopoverPlacement="right"
-     [nzPopoverContent]="popupHook">
+     [nzPopoverContent]="popupHook" [(nzPopoverVisible)]="menuVisible">
     <ng-container *ngIf="hookEvent && hookEvent.parent_workflow && !hookEvent.parent_workflow.name">
         <i class="ui icon {{icon | lowercase }}" [class.green]="hookEvent.uuid === hook.uuid"></i>
     </ng-container>
@@ -14,7 +14,3 @@
 <ng-template #popupHook>
     <app-workflow-menu-hook-edit (event)="receivedEvent($event)" [readonly]="isReadOnly" [workflow]="workflow" [hook]="hook" [hookEventUUID]="hookEvent?.uuid" #menuHook></app-workflow-menu-hook-edit>
 </ng-template>
-<app-delete-modal [title]="'workflow_hook_delete_title' | translate" [msg]="'workflow_hook_delete_msg' | translate"
-                  [autoclose]="false" (event)="deleteHook(deleteHookModal.modal)" #deleteHookModal>
-</app-delete-modal>
-<app-workflow-node-hook-details #workflowDetailsHook></app-workflow-node-hook-details>
